[tool.poetry]
name = "nvim-docker"
version = "0.1.0"
description = ""
authors = ["Riley Mathews <rileymathews80@gmail.com>"]
readme = "README.md"
packages = [{include = "nvim_docker"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
